# cifarcnn

./: pyproject.toml
src/cifarcnn/: __init__.py  __main__.py
